oauth2-proxy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.15.3-alpine
          imagePullPolicy: IfNotPresent
          args:
            - --provider=oidc
            - --oidc-issuer-url=https://auth.outi.ir
            - --redirect-url=https://auth.monitor.outi.ir/oauth2/callback
            - --email-domain=*
            - --http-address=0.0.0.0:4180
            - --upstream=static://200
            - --cookie-secure=true
            - --cookie-samesite=lax
            - --cookie-domain=.outi.ir
            - --whitelist-domain=.outi.ir
            - --set-xauthrequest=true
            - --pass-authorization-header=true
            - --pass-access-token=true
            - --skip-provider-button=true
          ports:
            - name: http
              containerPort: 4180
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 0
              memory: 0
