oauth2-proxy/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - auth.monitor.outi.ir
      secretName: oauth2-proxy-tls
  rules:
    - host: auth.monitor.outi.ir
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  name: http
